# DataBase

./: CMakeLists.txt  CMakePresets.json  Documentation.md  README.md
MailDB/src/: PgMailDB.cpp
libs/MailDB/: CMakeLists.txt
libs/MailDB/include/MailDB/: ConnectionException.h  DBCredentials.h  IMailDB.h  MailDB.h  MailException.h  PgMailDB.h  PostgreMailDB.h
libs/MailDB/src/: MailDB.cpp  PgMailDB.cpp  PostgreMailDB.cpp
libs/MailDB/test/: test.cpp
src/: main.cpp
test/: db_insert_dummy_data.txt  db_table_creation.txt  test.cpp
